fim das docs de hoje.

--- a/docs/1.ResultMessageAndResultErrors.md
+++ b/docs/1.ResultMessageAndResultErrors.md
@@ -13,3 +13,19 @@ Classes that standardize error messages. It will be demonstrated how to create t
 - `Exception`: Exception that originated the message. It is not mandatory.
 - `AdditionalInformation`: Additional information about the message. It is not mandatory. It is a dictionary of key-value pairs.
 
+> The `code` property is related to the `type` of the `ProblemDetails` (see [RFC 7807](https://tools.ietf.org/html/rfc7807)), but it may not be in format of a URI. When converto the message to `ProblemDetails`, the `code` can be a part of the `type` URI.
+
+The best way to create messages is through factory methods,
+which are static methods that return instances of `ResultMessage`.
+The factory methods are:
+
+- `Error`: Most generic way to create a message. There are several overloads for this method, with a high flexibility to create messages.
+- `NotFound`: Creates a message with status code 404 (Not Found). It is used to indicate that a resource was not found. For this error a generic `code` is assigned, with value `"404"'.
+- `InvalidParameter`: Creates a message with status code 400 (Bad Request). It is used to indicate that a parameter is invalid. For this error a generic `code` is assigned, with value `"400"'.
+- `ValidationError`: Creates a message with status code 422 (Unprocessable Entity). It is used to indicate that a validation error has occurred. For this error a generic `code` is assigned, with value `"422"'.
+- `ApplicationError`: Creates a message with status code 500 (Internal Server Error). It is used to indicate that an application error has occurred. For this error a generic `code` is assigned, with value `"500"'.
+- `Forbidden`: Creates a message with status code 403 (Forbidden). It is used to indicate that the user does not have permission to perform the operation. For this type of error there is no generic `code` defined.
+- `Conflict`: Creates a message with status code 409 (Conflict). It is used to indicate that a conflict has occurred. For this type of error there is no generic `code` defined.
+
+There are some standardized error codes defined as constants in the `GenericErrorCodes` class:
+
