--- a/docs/1.ResultMessageAndResultErrors.md
+++ b/docs/1.ResultMessageAndResultErrors.md
@@ -29,3 +29,195 @@ The factory methods are:
 
 There are some standardized error codes defined as constants in the `GenericErrorCodes` class:
 
+- `GenericError`: `"4XX"`, generic error, used in the conversion from ProblemDetails to ResultMessage when the error code is not known.
+- `NotFound`: `"404"`, errors of some entity/registry not found.
+- `InvalidParameter`: `"400"`, errors where the parameters entered are invalid.
+- `ValidationError`: `"422"`, errors where the input parameters are not valid by some application rule or domain.
+- `ApplicationError`: `"500"`, application error, exception, which is not a validation error.
+ 
+Error like `Forbidden` and `Conflict` do not have a generic code defined.
+Errors of these types are related to specific business rules of the application, and are not generic errors.
+
+### Creating a message
+
+The simplest way to create a message is through the `Error` method with a text message:
+
+```csharp
+var message = ResultMessage.Error("Error message");
+```
+
+Additionally, we can define the code for an HTTP response:
+
+```csharp
+var message = ResultMessage.Error("Error message", HttpStatusCode.BadRequest);
+```
+We can define the code for the error. The error code can be used to identify the error in the client:
+
+```csharp
+var error = ResultMessage.Error("error-code", "Error message");
+```
+
+Additionally, we can define the code for an HTTP response and an exception:
+
+```csharp
+var error = ResultMessage.Error("error-code", "Error message", HttpStatusCode.BadRequest, exception);
+```
+
+We can define the code for the error and a property.
+The property informs the client which property of the model the error refers to:
+
+```csharp
+var error = ResultMessage.Error("error-code", "Error message", "PropertyName");
+```
+
+Additionally, we can define the code for an HTTP response, an exception and a property:
+
+```csharp
+var error = ResultMessage.Error("error-code", "Error message", "PropertyName", HttpStatusCode.BadRequest, exception);
+```
+
+We can create an error from an exception:
+
+```csharp
+var error = ResultMessage.Error(exception);
+```
+
+Additionally, we can define more properties, like: error code, property name and HTTP status code:
+
+```csharp
+var error = ResultMessage.Error(exception, "PropertyName", "error-code", HttpStatusCode.BadRequest);
+```
+
+We can create a not found error. The will be a "404" string, and the http status code will be 404 "NotFound":
+
+```csharp
+var error = ResultMessage.NotFound("Error message", "PropertyName");
+```
+
+Additionally, we can define the code for the error, the error code can be used to identify the error in the client:
+
+```csharp
+var error = ResultMessage.NotFound("error-code", "Error message", "PropertyName");
+```
+
+We can create an invalid parameter error. The will be a "400" string, and the http status code will be 400 "BadRequest":
+
+```csharp
+var error = ResultMessage.InvalidParameter("Error message", "PropertyName");
+```
+
+We can create a validation error. The will be a "422" string, and the http status code will be 422 "UnprocessableEntity":
+
+```csharp
+var error = ResultMessage.ValidationError("Error message", "PropertyName");
+```
+
+Additionally, we can define the code for the error and an exception, the error code can be used to identify the error in the client:
+
+```csharp
+var error = ResultMessage.ValidationError("error-code", "Error message", "PropertyName", exception);
+```
+
+We can create a forbidden error. For errors of this type, the error code must be informed. The http status code will be 403 "Forbidden":
+
+```csharp
+var error = ResultMessage.Forbidden("error-code", "Error message", "PropertyName");
+```
+
+We can create a conflict error. For errors of this type, the error code must be informed. The http status code will be 409 "Conflict":
+
+```csharp
+var error = ResultMessage.Conflict("error-code", "Error message", "PropertyName");
+```
+
+We can create an application error from an exception. The will be a "500" string, and the http status code will be 500 "InternalServerError":
+
+```csharp
+var error = ResultMessage.ApplicationError(exception);
+```
+
+Additionally, we can define the message for the error:
+
+```csharp
+var error = ResultMessage.ApplicationError(exception, "Error Message");
+```
+
+Finally, we can create an application error from a message. The will be a "500" string, and the http status code will be 500 "InternalServerError":
+
+```csharp
+var error = ResultMessage.ApplicationError("Error Message");
+```
+
+### Creating a message with additional information
+
+We can create a message with additional information:
+
+```csharp
+// variables for the example
+var id = Guid.NewGuid();
+var value = 10;
+var required = 20;
+
+// create the message and add extra data
+var message = ResultMessage.Conflict("error-code, Error message", "PropertyName")
+    .WithAdditionInfo("Id", id)
+    .WithAdditionInfo("CurrentValue", value)
+    .WithAdditionInfo("RequiredValue", required);
+```
+
+The additional information can be any object, and will be serialized to JSON.
+
+## `ResultErrors`
+
+The `ResultErrors` class is a collection of `ResultMessage` objects. 
+It is used to return multiple errors in a single `OperationResult`.
+
+### Creating a collection of errors
+
+For `ResultErrors`, there are no factory methods. To create a collection of errors, we can use the constructor:
+
+```csharp
+// Create a empty ResultErrors.
+var result = new ResultErrors();
+```
+
+And now we can add errors to the collection:
+
+```csharp
+// add a message
+var message = ResultMessage.Error("Error message");
+result.Add(message);
+```
+
+We can add multiple errors at once:
+
+```csharp
+// Create a empty ResultErrors.
+var result = new ResultErrors();
+
+// add many messages with the With method
+result.With(ResultMessage.Error("Error message 1"))
+    .With(ResultMessage.Error("Error message 2"))
+    .With(ResultMessage.Error("Error message 3"));
+```
+
+There is an implicit conversion from a `ResultMessage` to a `ResultErrors`:
+
+```csharp
+// Create a ResultMessage.
+ResultMessage message = ResultMessage.Error("Error message");
+
+// Implicit conversion to ResultErrors.
+ResultErrors result = message;
+```
+
+There is also an implicit assignment of `ResultMessage` to `ResultErrors`:
+
+```csharp
+// Create a empty ResultErrors.
+var result = new ResultErrors();
+
+result += ResultMessage.Error("Error message 1");
+result += ResultMessage.Error("Error message 2");
+result += ResultMessage.Error("Error message 3");
+```
