--- a/docs/2.ValidableResult.md
+++ b/docs/2.ValidableResult.md
@@ -3,3 +3,29 @@
 A struct to represent a operation result, that can be used for validations.
 
 This struct can be initialized as success and errors messages can be added, making the result a failure.
+
+The following demonstrates how to use the `ValidableResult` struct.
+
+## Creating a success result
+
+The sample below shows how to create a success result:
+
+```csharp
+var result = new ValidableResult();
+```
+
+This result is valid, and can be used to return a success operation.
+
+When adding errors to this result, it will become a failure.
+
+## Creating a failure result
+
+The sample below shows how to create a failure result:
+
+```csharp
+var result = new ValidableResult();
+
+result += ResultMessage.Error("Error message 1");
+```
+
+Using the `+=` operator, we can add a `ResultMessage` to the result, making it a failure.
