docs and samples

--- a/docs/1.ResultMessageAndResultErrors.md
+++ b/docs/1.ResultMessageAndResultErrors.md
@@ -168,6 +168,34 @@ var message = ResultMessage.Conflict("error-code, Error message", "PropertyName"
 
 The additional information can be any object, and will be serialized to JSON.
 
+### Others samples of use
+
+Creating a message to validate a payment request, where the account balance is less than the amount to be paid. This is a business rule of the application, and therefore we use the `Forbidden` method of `ResultMessage`:
+
+```csharp
+if (account.Balance < request.Amount)
+{
+    var message = ResultMessage.Forbidden("out-of-credit", 
+            $"Your current balance is {account.Balance}, but that costs {request.Amount}.", 
+            nameof(PaymentRequest.Amount))
+        .WithAdditionInfo(nameof(Account.Balance), account.Balance)
+        .WithAdditionInfo(nameof(PaymentRequest.Amount), request.Amount);
+}
+```
+
+Creating a message to validate the state of an order, where the order is not in the "Pending" state. This is a business rule of the application, and therefore we use the `Conflict` method of `ResultMessage`:
+
+```csharp
+if (order.State != OrderState.Pending)
+{
+    var message = ResultMessage.Conflict("invalid-state", 
+            $"The order is in the {order.State} state, but it must be in the {OrderState.Pending} state to execute the operation {nameof(OrderService.CancelOrder)}.",
+            nameof(Order.State))
+        .WithAdditionInfo(nameof(Order.State), order.State)
+        .WithAdditionInfo("Operation", nameof(OrderService.CancelOrder));
+}
+```
+
 ## `ResultErrors`
 
 The `ResultErrors` class is a collection of `ResultMessage` objects.
