--- a/docs/2.ValidableResult.md
+++ b/docs/2.ValidableResult.md
@@ -29,3 +29,37 @@ result += ResultMessage.Error("Error message 1");
 ```
 
 Using the `+=` operator, we can add a `ResultMessage` to the result, making it a failure.
+
+A failure result can be created from a `ResultErrors`:
+
+```csharp
+var errors = new ResultErrors();
+errors += ResultMessage.Error("Error message");
+
+var result = new ValidableResult(errors);
+```
+
+## Using for validations
+
+The `ValidableResult` can be used for validations, as shown below:
+
+```csharp
+var result = new ValidableResult(); // Creates a success result
+
+if (string.IsNullOrWhiteSpace(book.Title))
+    result += ResultMessage.Error("Title is required");
+
+if (string.IsNullOrWhiteSpace(book.Author))
+    result += ResultMessage.Error("Author is required");
+
+if (book.Pages <= 0)
+    result += ResultMessage.Error("Pages must be greater than zero");
+
+return result;
+```
+
+In the example above, the result is created as a success, and if an error message is added, the result becomes a failure.
+
+## Working with `ValidableResult`
+
+todo
