updated nuget and examples.

--- a/docs/1.ResultMessageAndResultErrors.md
+++ b/docs/1.ResultMessageAndResultErrors.md
@@ -161,9 +161,9 @@ var required = 20;
 
 // create the message and add extra data
 var message = ResultMessage.Conflict("error-code, Error message", "PropertyName")
-    .WithAdditionInfo("Id", id)
-    .WithAdditionInfo("CurrentValue", value)
-    .WithAdditionInfo("RequiredValue", required);
+    .WithInformation("Id", id)
+    .WithInformation("CurrentValue", value)
+    .WithInformation("RequiredValue", required);
 ```
 
 The additional information can be any object, and will be serialized to JSON.
@@ -178,8 +178,8 @@ if (account.Balance < request.Amount)
     var message = ResultMessage.Forbidden("out-of-credit", 
             $"Your current balance is {account.Balance}, but that costs {request.Amount}.", 
             nameof(PaymentRequest.Amount))
-        .WithAdditionInfo(nameof(Account.Balance), account.Balance)
-        .WithAdditionInfo(nameof(PaymentRequest.Amount), request.Amount);
+        .WithInformation(nameof(Account.Balance), account.Balance)
+        .WithInformation(nameof(PaymentRequest.Amount), request.Amount);
 }
 ```
 
@@ -191,8 +191,8 @@ if (order.State != OrderState.Pending)
     var message = ResultMessage.Conflict("invalid-state", 
             $"The order is in the {order.State} state, but it must be in the {OrderState.Pending} state to execute the operation {nameof(OrderService.CancelOrder)}.",
             nameof(Order.State))
-        .WithAdditionInfo(nameof(Order.State), order.State)
-        .WithAdditionInfo("Operation", nameof(OrderService.CancelOrder));
+        .WithInformation(nameof(Order.State), order.State)
+        .WithInformation("Operation", nameof(OrderService.CancelOrder));
 }
 ```
 
