--- a/docs/2.ValidableResult.md
+++ b/docs/2.ValidableResult.md
@@ -62,4 +62,134 @@ In the example above, the result is created as a success, and if an error messag
 
 ## Working with `ValidableResult`
 
-todo
+Once the `ValidableResult` has been created, we can work with it in different ways.
+
+There are three methods that can be used to work with the result:
+- `TryGetError`
+- `Convert`
+- `Match`
+
+Here's how to use them.
+
+### `TryGetError`
+
+It is common to create a validation method that returns a `ValidableResult`.
+After calling the method and getting the result, we can check if the result is invalid and, if it is, we can get the error messages.
+
+Here's an example:
+
+```csharp
+
+var result = Validate(book);
+
+var failure = result.TryGetError(out var errors);
+```
+
+The `TryGetError` method will return `true` if the result is invalid, and `false` if it is valid.
+When the result is invalid, the `errors` parameter receives the result errors (`ResultErrors`).
+
+These validations can occur within a method that returns an `OperationResult`, 
+then we can use the `TryGetError` method to check if the result is invalid and, if it is, return the errors.
+
+```csharp
+public OperationResult ProcessBook(BookDto book)
+{
+    var result = Validate(book);
+
+    if (result.TryGetError(out var errors))
+        return errors;
+
+    // do something with the book
+
+    return new();
+}
+```
+
+In the example above, the variable `errors` is obtained if `result` is a failure.
+There is an implicit conversion from `ResultErrors` to `OperationResult`, so we can return `errors` directly.
+As we are working with `struct`, there is no allocation of objects.
+
+If the result is successful, the `TryGetError` method will return `false` and the code below will be executed.
+
+### `Convert`
+
+The `Convert` method can be used to convert a `ValidableResult` into an `OperationResult<TValue>`.
+
+This is done through a conversion function, which receives the value of the result and returns the value of the `OperationResult<TValue>`.
+
+Here's an example:
+
+```csharp
+public OperationResult<int> ValidateAndGetPages(BookDto book)
+{
+    var result = Validate(book);
+
+    return result.Convert(() => book.Pages);
+}
+```
+
+In this example, the `ValidateAndGetPages` method returns an `OperationResult<int>`.
+
+If the result of `Validate` is valid, the `Convert` method will execute the conversion function and the value of `book.Pages` will be returned.
+
+If the result is invalid, the conversion function will not be executed and the `OperationResult<int>` will be returned with the result errors.
+
+There is an overload of the `Convert` method which receives a conversion function that takes an extra parameter.
+
+Here's an example:
+
+```csharp
+public OperationResult<Guid> CreateBook(BookDto book)
+{
+    var result = Validate(book);
+
+    return result.Convert(s => s.Create(book), bookStore);
+}
+```
+
+In this example, the conversion function receives an extra parameter, which is `bookStore`.
+
+### `Match`
+
+The `Match` method can be used to perform an action according to the result, success or failure.
+In each case, a function is executed and the return from the function is returned by the `Match` method.
+
+Here's an example:
+
+```csharp
+public IResult ValidateBook(BookDto book)
+{
+    var result = Validate(book);
+
+    return result.Match(
+        success: () => Results.Ok("Book is valid"),
+        failure: (errors) => Results.BadRequest(errors));
+}
+```
+
+In this example, the `ValidateBook` method returns an `IResult` from AspNetCore (Minimal API).
+
+If the result is valid, the function `() => Results.Ok("Book is valid")` will be executed and the `OK` result will be returned.
+
+Otherwise, the function `(errors) => Results.BadRequest(errors)` will be executed and the `BadRequest` result will be returned.
+
+The names of the parameters in the `Match` method are `success` and `failure`, and their use is optional. 
+However, when used as in the example, the code is more readable.
+
+There is an overload of the `Match` method which receives a conversion function that takes an extra parameter.
+
+Here's an example:
+
+```csharp
+public Task ExecuteMatchAsync(ActionContext context, ValidableResult result)
+{
+    return result.Match(
+        ExecuteSuccessResultAsync,
+        ExecuteErrorResultAsync,
+        context);
+}
+```
+
+In this example, the `ExecuteMatchAsync` function receives an `ActionContext` from AspNetCore and a `ValidableResult`.
+
+The `ExecuteSuccessResultAsync` and `ExecuteErrorResultAsync` are delegates of methods, and are executed according to the result.
