--- a/docs/3.OperationResult.md
+++ b/docs/3.OperationResult.md
@@ -66,3 +66,27 @@ result += ResultMessage.Error("Error message 2");
 result += ResultMessage.Error("Error message 3");
 ```
 
+## Working with the `OperationResult`
+
+The `OperationResult` has the same methods as the `ValidableResult`,
+and some additional methods to work with the success or failure state.
+
+The following methods are available:
+- `TryGetError`
+- `Convert`
+- `Match`
+- `TryConvertError<TOtherError>`
+- `IsSuccessOrGetError`
+- `IsSuccessOrConvertError`
+
+The first three were presented in the `ValidableResult` section, now let's look at the other methods.
+
+### `TryConvertError<TOtherError>`
+
+This method is similar to `TryGetError`, returning a `bool`, being true when the result is a failure.
+However, instead of the output being a `ResultError`, it will be the result of converting the `ResultError` into a `TOtherError`.
+
+The conversion will only take place if the result is a failure.
+
+Here's an example of how to use it:
+
