--- a/docs/3.OperationResult.md
+++ b/docs/3.OperationResult.md
@@ -90,3 +90,21 @@ The conversion will only take place if the result is a failure.
 
 Here's an example of how to use it:
 
+```csharp
+OperationResult result = DoSomething();
+
+if (result.TryConvertError(static errors => errors.CreateException(), out var exception))
+    throw exception;
+
+DoMore();
+```
+
+In the example above, the `DoSomething` method returns an `OperationResult`.
+
+If the result is a failure, the `TryConvertError` method will convert the `ResultError` into an `Exception` and return true.
+Otherwise, it will return false.
+
+If the result is a failure, the `exception` variable will contain the converted `Exception`.
+
+### `IsSuccessOrGetError`
+
