docs operation result without value.

--- a/docs/3.OperationResult.md
+++ b/docs/3.OperationResult.md
@@ -108,3 +108,60 @@ If the result is a failure, the `exception` variable will contain the converted 
 
 ### `IsSuccessOrGetError`
 
+This method is similar to `TryGetError`, returning a `bool`, but with the value inverted,
+it returns true when the result is a success and false when it is an error.
+
+When it is a failure result, the errors will be returned in the `error` parameter.
+
+Here's an example:
+
+```csharp
+public OperationResult<SomeValueObject> IsSuccessOrGetErrorSample()
+{
+    OperationResult result = DoSomething();
+
+    if (result.IsSuccessOrGetError(out var error))
+    {
+        SomeValueObject value = DoSomethingElse();
+        return value;
+    }
+
+    return error;
+}
+```
+
+In the example above, the `DoSomething` method returns an `OperationResult`.
+
+If the result is a success, the `IsSuccessOrGetError` method will return true and the `error` variable will be null.
+
+If the result is a failure, the `IsSuccessOrGetError` method will return false and the `error` variable will contain the errors.
+
+### `IsSuccessOrConvertError`
+
+Este método é similar aos dois acima, um junção do `IsSuccessOrGetError` e `TryConvertError`.
+
+Veja o exemplo abaixo:
+
+```csharp
+public SomeValueObject IsSuccessOrConvertErrorSample()
+{
+    OperationResult result = DoSomething();
+
+    if (result.IsSuccessOrConvertError(static errors => errors.CreateException(), out var exception))
+    {
+        SomeValueObject value = DoSomethingElse();
+        return value;
+    }
+
+    throw exception;
+}
+```
+
+In the example above, the `DoSomething` method returns an `OperationResult`.
+
+If the result is a success, the `IsSuccessOrConvertError` method will return true
+and the `exception` variable will be null.
+
+If the result is a failure, the `IsSuccessOrConvertError` method will return false
+and the `exception` variable will contain the converted `Exception`.
+
