--- a/docs/3.OperationResult.md
+++ b/docs/3.OperationResult.md
@@ -138,9 +138,9 @@ If the result is a failure, the `IsSuccessOrGetError` method will return false a
 
 ### `IsSuccessOrConvertError`
 
-Este método é similar aos dois acima, um junção do `IsSuccessOrGetError` e `TryConvertError`.
+This method is similar to the two above, a combination of `IsSuccessOrGetError` and `TryConvertError`.
 
-Veja o exemplo abaixo:
+See the example below:
 
 ```csharp
 public SomeValueObject IsSuccessOrConvertErrorSample()
