--- a/docs/2.ValidableResult.md
+++ b/docs/2.ValidableResult.md
@@ -143,11 +143,22 @@ public OperationResult<Guid> CreateBook(BookDto book)
 {
     var result = Validate(book);
 
-    return result.Convert(s => s.Create(book), bookStore);
+    return result.Convert(bookStore, s => s.Create(book));
 }
 ```
 
 In this example, the conversion function receives an extra parameter, which is `bookStore`.
+
+You can work with static conversion functions, for example:
+
+```csharp
+public OperationResult<Guid> ValidableResult_Convert_WithParam(BookDto book)
+{
+    var result = Validate(book);
+
+    return result.Convert((bookStore, book), static tuple => tuple.bookStore.Create(tuple.book));
+}
+```
 
 ### `Match`
 
@@ -183,10 +194,9 @@ Here's an example:
 ```csharp
 public Task ExecuteMatchAsync(ActionContext context, ValidableResult result)
 {
-    return result.Match(
-        ExecuteSuccessResultAsync,
-        ExecuteErrorResultAsync,
-        context);
+    return result.Match(context
+        success: ExecuteSuccessResultAsync,
+        failure: ExecuteErrorResultAsync);
 }
 ```
 
