--- a/docs/3.OperationResult.md
+++ b/docs/3.OperationResult.md
@@ -8,6 +8,8 @@ The following demonstrates how to use the `OperationResult` struct.
 
 ## Creating a success result
 
+The sample below shows how to create a success result:
+
 ```csharp
 var result = new OperationResult;
 
