For Controllers docs created.

--- a/docs/6.ResultsForControllers.md
+++ b/docs/6.ResultsForControllers.md
@@ -1,2 +1,85 @@
 # Results for Controllers
 
+There are response classes for ApsNetCore MVC Controllers and extension methods to make it easier to create responses from an `OperationResult`.
+
+To use them, you need to install the package: `RoyalCode.OperationResult.MvcResults`:
+
+```bash
+dotnet add package RoyalCode.OperationResult.MvcResults
+```
+
+The library includes the base class `OperationMatchObjectResultBase<TResult>`, which inherits from `ObjectResult` and implements the `IActionResult` interface. This class is responsible for converting the result of the operation into an HTTP response with the appropriate content and status code. For failure cases, it can serialise the errors or generate a `ProblemDetails` with the errors.
+
+Three classes inherit the base class, one for each type of result: `OperationMatchObjectResult`, `OperationMatchObjectResult<TValue>` and `ValidableMatchObjectResult`.
+
+The way to use it is via the `ToActionResult` extension method for the `OperationResult`, `OperationResult<TValue>` and `ValidableResult` result types.
+
+Here are some examples of its use:
+
+---
+
+<br/>
+
+**Converting an `OperationResult<TValue>` into an `ActionResult<TValue>`:**
+
+```csharp
+[HttpGet("products/{id}")]
+public async Task<ActionResult<Product>> GetById([FromServices] IProductService service, int id)
+{
+    OperationResult<Product> result = await service.GetProductAsync(id);
+
+    return result.ToActionResult();
+}
+```
+
+In the example above, the `IProductService` service returns an `OperationResult<Product>`. The `ToActionResult` method converts the result of the operation into an `OperationMatchObjectResult<Product>`, which inherits the method's return type.
+
+If the product exists for the id entered, a success result will be returned with the value (product). If the product does not exist, a failure result will be returned with the error `NotFound`.
+
+The `OperationMatchObjectResult<Product>` will generate the HTTP response according to the result, in the case of success an HTTP STATUS CODE 200 will be returned, in the case of failure an HTTP STATUS CODE 404 will be returned.
+
+---
+
+<br/>
+
+**Creating responses with HTTP STATUS CODE 201 (Created):**
+
+```csharp
+[HttpPost("products")]
+public async Task<ActionResult<Product>> Create(
+    [FromServices] IProductService service,
+    [FromBody] ProductDto dto)
+{
+    OperationResult<Product> result = await service.CreateProductAsync(dto);
+
+    return result.ToActionResult(p => $"products/{p.Id}");
+}
+```
+
+In this example, if the result is successful, the `ToActionResult` method will return an `OperationMatchObjectResult<Product>` with the HTTP STATUS CODE 201 and the `Location` header with the value `products/{id}`.
+
+There is an overload for this method, where you can enter the value of the location header as a string:
+
+```csharp
+return result.ToActionResult($"products/{id}");
+```
+
+An extra parameter can also be entered, stating whether the location header value should be formatted with the result value. The implementation could look something like this:
+
+```csharp
+[HttpPost("products")]
+public async Task<ActionResult<Product>> Create(
+    [FromServices] IProductService service,
+    [FromBody] ProductDto dto)
+{
+    OperationResult<Product> result = await service.CreateProductAsync(dto);
+
+    var idResult = result.Convert(p => p.Id);
+
+    return idResult.ToActionResult("products/{0}", true);
+}
+```
+
+In this case, when the result is successful, the value of the location header (`products/{0}`) will be formatted with the value of the result, which is the `Id` of the product created.
+
+This extension method also exists for the `OperationResult` and `ValidableResult` types, but as these types do not accept a value, the extension method does not accept a parameter to format the value of the `Location` header.
