--- a/docs/7.ResultsForMinimalApi.md
+++ b/docs/7.ResultsForMinimalApi.md
@@ -1,6 +1,8 @@
 # Results for Minimal API
 
-Para Minimal Api há diferentes componentes e métodos para cada versão do .Net.
+For Minimal Api there are different components and methods for each version of .Net.
+
+To use them, you need to install the package: `RoyalCode.OperationResult.ApiResults`:
 
 For **.Net 6.0** an extension method is available for `IResultExtensions` called `ToResult`, which will return an `IResult`. The returned object will produce an HTTP response according to the result, success or failure.
 
@@ -9,9 +11,10 @@ For **.Net 7.0** there is also the `ToResult` extension method, but the return t
 An example of using the `ToResult` method for **.Net 6.0** would be this:
 
 ```csharp
-public async Task<IResult> Create(
-    [FromBody] ProductDto productDto,
-    [FromServices] IProductService productService)
+// MapPost("/products")
+public static async Task<IResult> Create(
+    ProductDto productDto /* FromBody */,
+    IProductService productService /* FromServices */)
 {
     var result = await productService.CreateProductAsync(productDto);
 
@@ -28,9 +31,10 @@ For **.Net 7.0** there are also extension methods called `CreatedMatch` and `OkM
 Using these methods, the previous example could look like this:
 
 ```csharp
+// MapPost("/products")
 public async Task<CreatedMatch<Product>> Create_2(
-    [FromBody] ProductDto productDto,
-    [FromServices] IProductService productService)
+    ProductDto productDto /* FromBody */,
+    IProductService productService /* FromServices */)
 {
     var result = await productService.CreateProductAsync(productDto);
 
@@ -38,7 +42,7 @@ public async Task<CreatedMatch<Product>> Create_2(
 }
 ```
 
-However, these are not the best ways to use them, because there are types in the library that implement the `IResult` interface, which have several implicit conversions.
+For .Net 7.0 using the `ToResult` extension method is not the best way to work with Minimal Api's, as there are types in the library that implement the `IResult` interface, which has several implicit conversions.
 
 The types that implement the `IResult` interface are:
 
@@ -48,5 +52,7 @@ The types that implement the `IResult` interface are:
 - `MatchErrorResult`: Represents a failed result with Status Code obtained automatically from error messages.
 
 > Except for `MatchErrorResult`, all the other types only exist in **.Net 7.0**.
+
+The `MatchErrorResult` class will handle failure operations, picking up the messages and generating a response with the appropriate status code.
 
 Examples for implicit conversions, the best way to work in **.Net 7.0**, will be presented in the next section.
