--- a/docs/8.ImplicitConversionsForMinimalApi.md
+++ b/docs/8.ImplicitConversionsForMinimalApi.md
@@ -22,8 +22,8 @@ This means that if a minimal api method/function returns an `OkMatch<T>`, the po
 Once this is understood, we can use implicit conversions to generate responses from our APIs in a simpler way. See the example below, where an entity is searched for, if it is found, a `200` is returned with the entity, otherwise a `404` is returned with the details of the problem:
 
 ```csharp
-[HttpGet("{id}")]
-public static OkMatch<Product> Get(int id, [FromServices] IProductService productService)
+// MapGet("/products/{id}")
+public static OkMatch<Product> Get(int id, IProductService productService)
 {
     Product? product = productService.Find(id);
 
@@ -41,8 +41,8 @@ If the product is found, the `Product` object returned by the method will be imp
 Há conversões implícitas entre os tipos de resultado de operação e os objetos de resultado para Minimal API. Veja o mesmo exemplo acima, mas agora com o uso de `IOperationResult<Product>`:
 
 ```csharp
-[HttpGet("{id}")]
-public static async Task<OkMatch<Product>> GetAsync(int id, [FromServices] IProductService productService)
+// MapGet("/products/{id}")
+public static async Task<OkMatch<Product>> GetAsync(int id, IProductService productService)
 {
     OperationResult<Product> result = await productService.GetProductAsync(id);
     return result;
@@ -53,5 +53,88 @@ In the example, the `GetProductAsync` method returns an `IOperationResult<Produc
 
 For returns of the type `CreatedMatch` and `CreatedMatch<T>` (201) there are implicit conversions to `Created<T>` (201). Another option would be to use the `CreatedMatch` and `CreatedMatch<T>` extension methods, already presented in the previous section.
 
+The reason there is no direct conversion is that returns of type 201 require the `Location` header to be entered, and this is not possible with implicit conversions.
+
 ## Implicit conversions list
 
+All possible implicit conversions are listed here.
+
+### `OkMatch`
+
+For the `OkMatch` type there are implicit conversions from the types:
+
+- `OperationResult`: where the status code will depend on the result of the operation, being 200 for success and for failure it will be obtained automatically from the error messages.
+
+- `ValidableResult`: works in the same way as `OperationResult`.
+
+- `Ok`: where the status code will be 200.
+
+- `MatchErrorResult`: where the status code will be obtained automatically from the error messages.
+
+- `ResultMessage`: where the status code will be obtained automatically from the error messages.
+
+- `ResultErrors`: where the status code will be obtained automatically from the error messages.
+
+### `OkMatch<T>`
+
+For the `OkMatch<T>` type there are implicit conversions from the types:
+
+- `OperationResult<T>`: where the status code will depend on the result of the operation, being 200 for success and for failure it will be obtained automatically from the error messages.
+
+- `Ok<T>`: where the status code will be 200.
+
+- `T`: the value, where the status code will be 200.
+
+- `MatchErrorResult`: where the status code will be obtained automatically from the error messages.
+
+- `ResultMessage`: where the status code will be obtained automatically from the error messages.
+
+- `ResultErrors`: where the status code will be obtained automatically from the error messages.
+
+### `CreatedMatch`
+
+For the `CreatedMatch` type there are implicit conversions from the types:
+
+- `Created`: where the status code will be 201.
+
+- `MatchErrorResult`: where the status code will be obtained automatically from the error messages.
+
+- `ResultMessage`: where the status code will be obtained automatically from the error messages.
+
+- `ResultErrors`: where the status code will be obtained automatically from the error messages.
+
+### `CreatedMatch<T>`
+
+For the `CreatedMatch<T>` type there are implicit conversions from the types:
+
+- `Created<T>`: where the status code will be 201.
+
+- `MatchErrorResult`: where the status code will be obtained automatically from the error messages.
+
+- `ResultMessage`: where the status code will be obtained automatically from the error messages.
+
+- `ResultErrors`: where the status code will be obtained automatically from the error messages.
+
+### `NoContentMatch`
+
+For the `NoContentMatch` type there are implicit conversions from the types:
+
+- `OperationResult`: where the status code will depend on the result of the operation, being 200 for success and for failure it will be obtained automatically from the error messages.
+
+- `ValidableResult`: works in the same way as `OperationResult`.
+
+- `NoContent`: where the status code will be 204.
+
+- `MatchErrorResult`: where the status code will be obtained automatically from the error messages.
+
+- `ResultMessage`: where the status code will be obtained automatically from the error messages.
+
+- `ResultErrors`: where the status code will be obtained automatically from the error messages.
+
+### `MatchErrorResult`
+
+For the `MatchErrorResult` type there are implicit conversions from the types:
+
+- `ResultErrors`: where the status code will be obtained automatically from the error messages.
+
+- `ResultMessage`: where the status code will be obtained automatically from the error messages.
