problem details - part 1

--- a/docs/9.ProblemDetails.md
+++ b/docs/9.ProblemDetails.md
@@ -4,6 +4,67 @@ Failed operations are handled by the `MatchErrorResult` class. This class will g
 
 Messages can be formatted into JSON as a list of `ResultMessage` or transformed into a `ProblemDetails` object.
 
-The return format is configurable. You can define the return pattern (`ResultMessage` or `ProblemDetails`),
-or the client can request the format via the `X-ErrorType` header.
+The return format is configurable. You can define the return pattern (`OperationResult` or `ProblemDetails`),
+or the client can request the format via the `Error-ResponseType` header.
+
+This functionality also works for Controllers, the `OperationMatchObjectResultBase<TResult>` object will apply the same rules as the `MatchErrorResult`.
+
+Firstly we'll present the existing configurations and how they work, then we'll show how error messages (`ResultMessage`) are transformed into `ProblemDetails`.
+
+## Configuration
+
+In this section we'll see how to define error return types, the options for generating `ProblemDetails` and how to configure problem types.
+
+### Defining error return types
+
+The static class `ErrorResultTypeOptions` defines the error return types.
+
+This class has the following (static) properties:
+
+- `IsFlexible`: Determines if the API clients can decide the result type, informing the header `Error-ResponseType`.
+
+- `IsProblemDetailsDefault`: Determines if the default result type is `ProblemDetails`, when false the default is `OperationResult`.
+
+The default values are `false` for both properties. That means the API will always return `OperationResult` when an error occurs and the header `Error-ResponseType` will be ignored.
+
+To change the value of these properties there is the `SetResultType` method which receives an enum of type `ErrorResultTypes` to set the properties.
+
+The enum `ErrorResultTypes` has the following values:
+
+- `AlwaysOperationResult`: The API will return the `OperationResult` when an error occurs. The header `Error-ResponseType` will be ignored.
+
+- `AlwaysProblemDetails`: The API will return the `ProblemDetails` when an error occurs. The header `Error-ResponseType` will be ignored.
+
+- `OperationResultAsDefault`: The API will return the `OperationResult` when an error occurs, by default. The header `Error-ResponseType` can be used to change the result type.
+
+- `ProblemDetailsAsDefault`: The API will return the `ProblemDetails` when an error occurs, by default. The header `Error-ResponseType` can be used to change the result type.
+
+Here is an example of how to set the return type to `ProblemDetails` by default and allow the client to change the return type:
+
+```csharp
+ErrorResultTypeOptions.SetResultType(ErrorResultTypes.ProblemDetailsAsDefault);
+```
+
+This call can be made in `Program.cs` or `Startup.cs`.
+
+### Options for generating `ProblemDetails`
+
+Now let's look at the options for generating `ProblemDetails`. There is a `ProblemDetailsOptions` class with some definitions for generating `ProblemDetails`. This class is used by `MatchErrorResult` to generate the `ProblemDetails`. There are some default settings for it, which will be seen throughout this section.
+
+Before going into the options, we need to understand how the relationship between a `ResultMessage` and a `ProblemDetails` works.
+
+A `ProblemDetails` object requires the following properties: `Type`, `Title`, `Status` and `Detail`. There are other properties, but these are the ones that are required.
+
+The `Status` and `Details` properties are obtained directly from the `ResultMessage`. 
+
+The `Type` and `Title` properties are taken from a dictionary of problem descriptions, and the library makes a relationship between the `Code` property of the `ResultMessage` and the `Type` property of the `ProblemDetails`.
+
+There are also generic error codes that the library provides. These errors already have a description.
+
+The `ProblemDetailsOptions` class has the dictionary of problem descriptions and other options for generating the `Type` from the `Code` and for generic error descriptions.
+
+When you want to use `ProblemDetails`, then you need to configure `ProblemDetailsOptions`, to be able to get the description of the problem from the error code.
+
+
+//AddProblemDetailsDescriptions
 
